添加随机键功能

--- a/keyboard.html
+++ b/keyboard.html
@@ -33,24 +33,24 @@
 				<div id="forgetPwd">忘记密码?</div>
 				<div id="keyRect">
 					<div class="keyRow">
-						<div class="keyCell">1</div>
-						<div class="keyCell">2</div>
-						<div class="keyCell">3</div>
+						<div class="keyCell"></div>
+						<div class="keyCell"></div>
+						<div class="keyCell"></div>
 					</div>
 					<div class="keyRow">
-						<div class="keyCell">4</div>
-						<div class="keyCell">5</div>
-						<div class="keyCell">6</div>
+						<div class="keyCell"></div>
+						<div class="keyCell"></div>
+						<div class="keyCell"></div>
 					</div>
 					<div class="keyRow">
-						<div class="keyCell">7</div>
-						<div class="keyCell">8</div>
-						<div class="keyCell">9</div>
+						<div class="keyCell"></div>
+						<div class="keyCell"></div>
+						<div class="keyCell"></div>
 					</div>
 					<div class="keyRow">
-						<div class="keyCell">c</div>
-						<div class="keyCell">0</div>
-						<div class="keyCell">del</div>
+						<div class="keyCell"></div>
+						<div class="keyCell"></div>
+						<div class="keyCell"></div>
 					</div>
 				</div>
 			</div>
